--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
   },
   "require": {
     "php": ">=7.3",
-    "zheltikov/php-invariant": "^1.0"
+    "zheltikov/php-invariant": "^1.0",
+    "zheltikov/php-memoize": "^2.1"
   },
   "require-dev": {
     "nazar-pc/phpt-tests-runner": "^1.4"
